some progress on getting latest version